# localShare

./: .gitignore  AGENTS.md  README.md  TODO.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/demand/: 产品需求文档.md
docs/design/: tauri-cloud-clipboard-design.md
docs/tasks/sp1/: README.md  T01-项目骨架与运行基线.md  T02-数据层与持久化基线.md  T03-剪贴板监听与事件链路.md  T04-会话认证与局域网服务.md  T05-桌面端状态台与历史管理UI.md  T06-移动端H5与手机操作闭环.md  T07-联调异常反馈与发布前收口.md  任务进度.md
docs/tasks/sp1/shared/: 实现约束与公共约定.md  范围与验收基线.md
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/clipboard/: events.rs  mod.rs  worker.rs
src-tauri/src/commands/: app.rs  mod.rs  workbench.rs
src-tauri/src/http/: handlers.rs  mod.rs  server.rs  state.rs  types.rs
src-tauri/src/network/: mod.rs
src-tauri/src/persistence/: migrations.rs  mod.rs  models.rs  repository.rs
src/composables/: useBootstrap.ts  useDesktopWorkbench.ts  useMobileWorkbench.ts
src/config/: runtime.ts
src/lib/: bootstrap.ts  workbenchApi.ts
src/pages/: DesktopWorkbenchPage.vue  MobileWorkbenchPage.vue  NotFoundPage.vue
src/router/: index.ts
src/styles/: index.css  theme.scss
src/types/: bootstrap.ts  workbench.ts
